--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,14 @@
     "theme_color": "#ffffff",
     "icons": [
         {
-            "src": "iphone_counter_app/docs/icon-192x192.png",
+            "src": "iphone_counter_app/docs/icon-192x192.jpg",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/jpeg"
         },
         {
-            "src": "iphone_counter_app/docs/icon-512x512.png",
+            "src": "iphone_counter_app/docs/icon-512x512.jpg",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/jpeg"
         }
     ]
 }
